--- a/Web_Hacking_101/0x06-跨站腳本攻擊.md
+++ b/Web_Hacking_101/0x06-跨站腳本攻擊.md
@@ -7,13 +7,13 @@
 >協議：CC BY-NC-SA 4.0
 
 ## **描述**
-跨站腳本，或者XSS，涉及到站定包含非預期的JavaScript腳本代碼，它隨後傳給用於，用戶在瀏覽器中執行了該代碼。它的一個無害示例為：
+跨站腳本，或者XSS，涉及到站定包含非預期的JavaScript腳本程式碼，它隨後傳給用於，用戶在瀏覽器中執行了該程式碼。它的一個無害示例為：
 
 ```javascript
 alert('XSS');
 ```
 
-這會調用JavaScript函數`alert`，並創建一個簡單的彈出窗口，帶有文本`XSS`。現在，在這本書的前一個版本中，我推薦你在報告中使用這個例子。但是，一個非常成功的黑客告訴我這是個糟糕的例子，因為漏洞的接收者通常沒有意識到這個問題的嚴重性，並且可能由於無害的示例而得到較低的獎金。
+這會調用JavaScript函數`alert`，並創建一個簡單的彈出窗口，帶有純文字`XSS`。現在，在這本書的前一個版本中，我推薦你在報告中使用這個例子。但是，一個非常成功的黑客告訴我這是個糟糕的例子，因為漏洞的接收者通常沒有意識到這個問題的嚴重性，並且可能由於無害的示例而得到較低的獎金。
 
 
 所以，考慮到這種情況，使用示例開判斷XSS是否存在，但是報告時，考慮漏洞如何影響站點，並解釋它。通過這樣，我並不是告訴廠商什麼事XSS，而是解釋你可以使用它做什麼事，來影響他們的站點。
@@ -29,7 +29,7 @@ alert('XSS');
 
 如果你發現了一個場景，其中 Self XSS 可以執行，但是不會儲存，你需要考慮該漏洞是否可以利用，是否有些東西可以結合起來，使其不再是 Self XSS？
 
-最著名的 XSS 利用示例之一，就是 Samy Kamkar 執行的 MySpace Samy 蠕蟲。在 2005 年 10 月，Samy 利用了一個 MySpace 上的儲存型 XSS 漏洞，允許它上傳 JavaScript 腳本。這個代碼隨後在任何人瀏覽它的 MySpace 主頁時執行，因此使任何 Samy 用戶資料的瀏覽者成為其好友。但是，更多的是，這個代碼也複製其自身到Samy 新朋友的頁面，所以受感染頁面的瀏覽者使用下面這段話更新了它們的資料頁面：“but most of all, samy is my hero” （最重要的是，Samy 是我的英雄）。
+最著名的 XSS 利用示例之一，就是 Samy Kamkar 執行的 MySpace Samy 蠕蟲。在 2005 年 10 月，Samy 利用了一個 MySpace 上的儲存型 XSS 漏洞，允許它上傳 JavaScript 腳本。這個程式碼隨後在任何人瀏覽它的 MySpace 主頁時執行，因此使任何 Samy 用戶資料的瀏覽者成為其好友。但是，更多的是，這個程式碼也複製其自身到Samy 新朋友的頁面，所以受感染頁面的瀏覽者使用下面這段話更新了它們的資料頁面：“but most of all, samy is my hero” （最重要的是，Samy 是我的英雄）。
 
 雖然 Samy 的利用並不完全是惡意的，XSS 利用使其能夠盜取用戶、密碼、銀行信息以及其他。雖然具有潛在的影響，修復 XSS 漏洞通常很簡單，只需要軟件開發者在渲染時轉義用戶輸入（就像 HTML 注入那樣）。在攻擊者提交它們的時候，一些站點也會截斷可能的惡意字符。
 
