--- a/Web_Hacking_101/0x06-跨站腳本攻擊.md
+++ b/Web_Hacking_101/0x06-跨站腳本攻擊.md
@@ -31,7 +31,7 @@ alert('XSS');
 
 最著名的 XSS 利用示例之一，就是 Samy Kamkar 執行的 MySpace Samy 蠕蟲。在 2005 年 10 月，Samy 利用了一個 MySpace 上的儲存型 XSS 漏洞，允許它上傳 JavaScript 腳本。這個程式碼隨後在任何人瀏覽它的 MySpace 主頁時執行，因此使任何 Samy 用戶資料的瀏覽者成為其好友。但是，更多的是，這個程式碼也複製其自身到Samy 新朋友的頁面，所以受感染頁面的瀏覽者使用下面這段話更新了它們的資料頁面：“but most of all, samy is my hero” （最重要的是，Samy 是我的英雄）。
 
-雖然 Samy 的利用並不完全是惡意的，XSS 利用使其能夠盜取用戶、密碼、銀行信息以及其他。雖然具有潛在的影響，修復 XSS 漏洞通常很簡單，只需要軟件開發者在渲染時轉義用戶輸入（就像 HTML 注入那樣）。在攻擊者提交它們的時候，一些站點也會截斷可能的惡意字符。
+雖然 Samy 的利用並不完全是惡意的，XSS 利用使其能夠盜取用戶、密碼、銀行訊息以及其他。雖然具有潛在的影響，修復 XSS 漏洞通常很簡單，只需要軟件開發者在渲染時轉義用戶輸入（就像 HTML 注入那樣）。在攻擊者提交它們的時候，一些站點也會截斷可能的惡意字符。
 
 >連結
 >
