--- a/Web_Hacking_101/0x06-跨站腳本攻擊.md
+++ b/Web_Hacking_101/0x06-跨站腳本攻擊.md
@@ -36,3 +36,44 @@ alert('XSS');
 >連結
 >
 >查看 [OWASP XSS 過濾器繞過速查表。](https://www.owasp.org/index.php/XSS_Filter_Evasion_Cheat_Sheet)
+
+---
+
+## **示例**
+
+## **1. Shopify Wholesale**
+
+
+```
+難度：低
+
+URL：wholesale.shopify.com
+
+報告鏈接：https://hackerone.com/reports/106293
+
+報告日期：2015.12.21
+
+獎金：$500
+
+```
+
+描述：
+
+Shopify Wholesale 站點是一個簡單的頁面，擁有不同的操作調用 -- 輸入商品名稱並且點擊"搜索商品"，這裡是截圖：
+
+![1](https://raw.githubusercontent.com/dyeat/Document_read/master/Web_Hacking_101/image/10-1.jpg)
+
+Shopify Wholesale 站點截圖
+
+這裡的 XSS 漏洞是你可以找到的最基本的漏洞 - 輸入到搜索框中的文本並沒有轉移，所以任何輸入的 JavaScript 都會執行。這裡是漏洞披露中的提交文本：`test';alert('XSS');'`。
+<p>
+它生效的原因是，Shopify 接收用戶輸入，執行搜索查詢，當沒有結果返回時，Shopify 會打印一條消息，說該名稱下沒有找到任何商品，之後重新打印出用戶輸入，而沒有任何轉義。因此，提交的 JavaScript 打印到了頁面上，瀏覽器將其解釋為 JavaScript 並執行。
+
+>重要結論
+>
+>測試任何東西，特別要關註一些場景，其中你所輸入的文本渲染給了你。測試來判斷你是否可以包含 HTML 或者 
+>JavaScript，來觀察站點如何處理它。同時嘗試編碼輸入，就像在 HTML 注入一章中描述的那樣。
+>
+>XSS 漏洞並不需要很複雜。這個漏洞是你能找到的最基本的東西 - 一個簡單的輸入文本字段，這個漏洞並不處理用戶輸入。
+>它在 2015 年 12 月 21 日發現，並獲得了 $500 的獎金。它所需要的所有東西，就是黑客的思維。
+
