--- a/Web_Hacking_101/0x06-跨站腳本攻擊.md
+++ b/Web_Hacking_101/0x06-跨站腳本攻擊.md
@@ -47,9 +47,9 @@ alert('XSS');
 ```
 難度：低
 
-URL：wholesale.shopify.com
+URL：`wholesale.shopify.com`
 
-報告鏈接：https://hackerone.com/reports/106293
+報告連結：https://hackerone.com/reports/106293
 
 報告日期：2015.12.21
 
