--- a/Web_Hacking_101/0x06-跨站腳本攻擊.md
+++ b/Web_Hacking_101/0x06-跨站腳本攻擊.md
@@ -77,3 +77,45 @@ Shopify Wholesale 站點截圖
 >XSS 漏洞並不需要很複雜。這個漏洞是你能找到的最基本的東西 - 一個簡單的輸入文本字段，這個漏洞並不處理用戶輸入。
 >它在 2015 年 12 月 21 日發現，並獲得了 $500 的獎金。它所需要的所有東西，就是黑客的思維。
 
+---
+
+## **2. Shopify 禮品卡購物車**
+
+```
+難度：低
+
+URL：hardware.shopify.com/cart
+報告鏈接：https://hackerone.com/reports/95089
+報告日期：2015.10.21
+獎金：$500
+
+```
+描述：
+
+Shopify 禮品卡站點允許用戶使用 HTML 表單設計它們自己的禮品卡，具體來說，這包括一個上傳輸入框，一些文本框，以及其他。這裡是一個截圖：
+
+![2](https://raw.githubusercontent.com/dyeat/Document_read/master/Web_Hacking_101/image/10-2.jpg)
+
+Shopify 禮品卡表單截圖
+這裡的 XSS 漏洞在 JavaScript 輸入到了表單圖像名稱字段時出現。在使用 HTML 代理完成之後，會出現一個不錯的簡單任務。所以這裡，原始的表單提交會包含：
+
+
+```
+Content-Disposition: form-data; name="properties[Artwork file]"
+```
+這會被解釋和修改為：
+
+```
+Content-Disposition: form-data; name="properties[Artwork file<img src='test' onm\ ouseover='alert(2)'>]";
+```
+
+>重要結論
+>
+>這裡有兩個東西要注意，這會在尋找 XSS 漏洞時幫助你：
+>
+> 1. 這裡的漏洞實際上並不在文件輸入字段本身 -- 它在字段的名稱屬性中。所以當你尋找 XSS 漏洞的機會時，要記住玩轉所有可用的輸入值。
+>
+> 2. 這裡的值在通過代理操作之後提交。在一些場景中這是關鍵，其中在任何值實際提交給服務器之前，客戶端（你的瀏覽器）可能存在 JavaScript 來驗證值。
+>
+> **實際上，任何時候你看到驗證實時發生在你的瀏覽器中，這都是一個信號，你需要測試這個字段！** 開發者可能犯下這個錯誤，
+>一旦這些值提交給了服務器，它們不驗證提交的值是否存在惡意代碼，因為它們認為瀏覽器的 JavaScript 代碼已經在輸入接收之前驗證過了。
