--- a/Web_Hacking_101/0x06-跨站腳本攻擊.md
+++ b/Web_Hacking_101/0x06-跨站腳本攻擊.md
@@ -47,7 +47,7 @@ alert('XSS');
 ```
 難度：低
 
-URL：`wholesale.shopify.com`
+URL：wholesale.shopify.com
 
 報告連結：https://hackerone.com/reports/106293
 
@@ -85,8 +85,11 @@ Shopify Wholesale 站點截圖
 難度：低
 
 URL：hardware.shopify.com/cart
+
 報告鏈接：https://hackerone.com/reports/95089
+
 報告日期：2015.10.21
+
 獎金：$500
 
 ```
