--- a/Web_Hacking_101/0x06-跨站腳本攻擊.md
+++ b/Web_Hacking_101/0x06-跨站腳本攻擊.md
@@ -122,3 +122,38 @@ Content-Disposition: form-data; name="properties[Artwork file<img src='test' onm
 >
 > **實際上，任何時候你看到驗證實時發生在你的瀏覽器中，這都是一個信號，你需要測試這個字段！** 開發者可能犯下這個錯誤，
 >一旦這些值提交給了服務器，它們不驗證提交的值是否存在惡意代碼，因為它們認為瀏覽器的 JavaScript 代碼已經在輸入接收之前驗證過了。
+
+---
+
+## **3. Shopify 貨幣格式**
+
+```
+難度：低
+
+URL：SITE.myshopify.com/admin/settings/generalt
+
+報告鏈接：https://hackerone.com/reports/104359
+
+報告日期：2015.12.9
+
+獎金：$1000
+
+```
+
+描述:
+
+Shopify 的商店設置包含修改貨幣格式的功能。在 12 月 9 日，有報告稱，這些輸入框的值在建立社交媒體頁面時，沒有合理處理。
+
+換句話說，惡意用戶可以建立一個商店，並將貨幣設置修改為下面這個：
+
+![3](https://raw.githubusercontent.com/dyeat/Document_read/master/Web_Hacking_101/image/10-3.jpg)
+
+Shopify 貨幣格式截圖
+
+之後，用戶就可以開啟社交媒體售賣頻道。報告中的例子是 Fackbook 和 Twitter，以及當用戶點擊這個售賣頻道的選項卡之後，JavaScript 會執行，產生 XSS 漏洞。
+
+>重要結論
+>
+>XSS 漏洞在 JavaScript 文本不安全渲染時產生。文本可能用於站點的多個位置，所以每個位置都應該測試。
+>這裡，Shopify 並沒有在商店和收款頁麵包含 XSS，因為用戶允許在它們的商店中使用 JavaScript。
+>在考慮字段是否用於外部社交媒體站點之前，很容易把這個漏洞補上。
