--- a/Web_Hacking_101/0x06-跨站腳本攻擊.md
+++ b/Web_Hacking_101/0x06-跨站腳本攻擊.md
@@ -86,7 +86,7 @@ Shopify Wholesale 站點截圖
 
 URL：hardware.shopify.com/cart
 
-報告鏈接：https://hackerone.com/reports/95089
+報告連結：https://hackerone.com/reports/95089
 
 報告日期：2015.10.21
 
@@ -132,7 +132,7 @@ Content-Disposition: form-data; name="properties[Artwork file<img src='test' onm
 
 URL：SITE.myshopify.com/admin/settings/generalt
 
-報告鏈接：https://hackerone.com/reports/104359
+報告連結：https://hackerone.com/reports/104359
 
 報告日期：2015.12.9
 
