--- a/Web_Hacking_101/0x06-跨站腳本攻擊.md
+++ b/Web_Hacking_101/0x06-跨站腳本攻擊.md
@@ -157,3 +157,64 @@ Shopify 貨幣格式截圖
 >XSS 漏洞在 JavaScript 文本不安全渲染時產生。文本可能用於站點的多個位置，所以每個位置都應該測試。
 >這裡，Shopify 並沒有在商店和收款頁麵包含 XSS，因為用戶允許在它們的商店中使用 JavaScript。
 >在考慮字段是否用於外部社交媒體站點之前，很容易把這個漏洞補上。
+
+---
+
+## **4. 雅虎郵件存儲型 XSS**
+
+```
+難度：低
+
+URL：Yahoo Mail
+
+報告連結：https://klikki.fi/adv/yahoo.html
+
+報告日期：2015.12.26
+
+獎金：$10000
+
+```
+
+描述:
+
+雅虎郵件編輯器允許人們將圖片通過 HTML IMG 標籤嵌入到郵件中。這個漏洞在 HTML IMG 標籤格式錯誤或者無效時出現。
+
+多數 HTML 標籤接受屬性，它是有關 HTML 標籤的額外信息。例如，IMG 標籤接受src屬性，指向要渲染的圖像的地址。此外一些屬性是布爾屬性，意思是如果他們存在，他們在 HTML 表現為真值，而當他們被忽略時，他們表現為假值。
+
+
+對於這個漏洞，Jouko Pynnonen 發現，如果它將布爾屬性添加到 HTML 標籤中，並帶有一個值，雅虎郵件就會移除該值但保留等號。這裡是來自Klikki.fi的一個例子：
+
+
+```html
+<INPUT TYPE="checkbox" CHECKED="hello" NAME="check box">
+```
+
+這裡，輸入標籤可能包含checked屬性，表示複選框是否渲染為選中。根據上面描述的歇息，這會變成：
+
+```html
+<INPUT TYPE="checkbox" CHECKED= NAME="check box">
+```
+
+要注意 HTML 從擁有checked值變成了沒有值但是仍然包含等號。
+
+這看起來是無害的，但是根據HTML 規範，瀏覽器將這個`CHECKED`看做擁有值`NAME="check`，並且該`input`標籤有用第三個屬性`box`，它沒有值。這是對於沒有引號的屬性值，因為HTML 允許零個或多個空格字符在等號周圍。
+
+為了利用它，Jouko 提交了下面的 IMG 標籤：
+
+```html
+<img ismap='xxx' itemtype='yyy style=width:100%;height:100%;position:fixed;left:0px;top:0px; onmouseover=alert(/XSS/)//'>
+```
+
+雅虎郵件會把它變成：
+
+```html
+<img ismap=itemtype=yyy style=width:100%;height:100%;position:fixed;left:0px;top:0px; onmouseover=alert(/XSS/)//>
+```
+
+因此，瀏覽器會渲染 IMG 標籤，它佔據整個瀏覽器的窗口，當鼠標移到圖片上的時候，會執行 JavaScript。
+
+>重要結論
+>
+>傳遞格式錯誤或損壞的 HTML 是個不錯的方法，來測試站點如何解析輸入。作為一個黑客，考慮到開發者沒有考慮的東西十分重要。
+>例如，使用常規的圖片標籤，如果你傳遞兩個`src`屬性會怎麼樣？它會如何渲染？
+
