--- a/Web_Hacking_101/0x06-跨站腳本攻擊.md
+++ b/Web_Hacking_101/0x06-跨站腳本攻擊.md
@@ -179,7 +179,7 @@ URL：Yahoo Mail
 
 雅虎郵件編輯器允許人們將圖片通過 HTML IMG 標籤嵌入到郵件中。這個漏洞在 HTML IMG 標籤格式錯誤或者無效時出現。
 
-多數 HTML 標籤接受屬性，它是有關 HTML 標籤的額外信息。例如，IMG 標籤接受src屬性，指向要渲染的圖像的地址。此外一些屬性是布爾屬性，意思是如果他們存在，他們在 HTML 表現為真值，而當他們被忽略時，他們表現為假值。
+多數 HTML 標籤接受屬性，它是有關 HTML 標籤的額外信息。例如，IMG 標籤接受`src`屬性，指向要渲染的圖像的地址。此外一些屬性是布爾屬性，意思是如果他們存在，他們在 HTML 表現為真值，而當他們被忽略時，他們表現為假值。
 
 
 對於這個漏洞，Jouko Pynnonen 發現，如果它將布爾屬性添加到 HTML 標籤中，並帶有一個值，雅虎郵件就會移除該值但保留等號。這裡是來自Klikki.fi的一個例子：
