--- a/Web_Hacking_101/0x06-跨站腳本攻擊.md
+++ b/Web_Hacking_101/0x06-跨站腳本攻擊.md
@@ -121,7 +121,7 @@ Content-Disposition: form-data; name="properties[Artwork file<img src='test' onm
 > 2. 這裡的值在通過代理操作之後提交。在一些場景中這是關鍵，其中在任何值實際提交給服務器之前，客戶端（你的瀏覽器）可能存在 JavaScript 來驗證值。
 >
 > **實際上，任何時候你看到驗證實時發生在你的瀏覽器中，這都是一個信號，你需要測試這個字段！** 開發者可能犯下這個錯誤，
->一旦這些值提交給了服務器，它們不驗證提交的值是否存在惡意代碼，因為它們認為瀏覽器的 JavaScript 代碼已經在輸入接收之前驗證過了。
+>一旦這些值提交給了服務器，它們不驗證提交的值是否存在惡意程式碼，因為它們認為瀏覽器的 JavaScript 程式碼已經在輸入接收之前驗證過了。
 
 ---
 
@@ -189,7 +189,7 @@ URL：Yahoo Mail
 <INPUT TYPE="checkbox" CHECKED="hello" NAME="check box">
 ```
 
-這裡，輸入標籤可能包含checked屬性，表示複選框是否渲染為選中。根據上面描述的歇息，這會變成：
+這裡，輸入標籤可能包含checked屬性，表示複選框是否渲染為選中。根據上面描述的消息，這會變成：
 
 ```html
 <INPUT TYPE="checkbox" CHECKED= NAME="check box">
@@ -217,4 +217,47 @@ URL：Yahoo Mail
 >
 >傳遞格式錯誤或損壞的 HTML 是個不錯的方法，來測試站點如何解析輸入。作為一個黑客，考慮到開發者沒有考慮的東西十分重要。
 >例如，使用常規的圖片標籤，如果你傳遞兩個`src`屬性會怎麼樣？它會如何渲染？
+
+---
+
+## **5. Google 圖片搜索**
+
+```
+難度：中
+
+URL：images.google.com
+
+報告連結：http://zombiehelp54.blogspot.ca/2015/09/how-i-found-xss-vulnerability-in-google.html
+
+報告日期：2015.9.12
+
+獎金：未知
+```
+
+描述:
+
+2015 年 9 月，Mahmoud Jamal 使用 Google 圖像來為它的 HackerOne 資料尋找一個圖片。在瀏覽的時候，它注意到 Google 圖片的 URL 中有一些有趣的東西。
+
+
+```
+http://www.google.com/imgres?imgurl=https://lh3.googleuser.com/...
+```
+
+注意到實際的 URL 中存在 `imgurl`的引用。在鼠標移到縮略圖上的時候，Mahoumd 注意到了錨標籤的`href`屬性包含了相同的 URL。因此，它嘗試將參數改為`javascript:alert(1)`，並且注意到錨標籤的`href`也改為了相同值。
+
+
+它這個時候非常激動，點擊了連結，但是沒有執行 JavaScript，因為 Google URL 改為了別的東西。結果，Google 的程式碼在鼠標按下時，通過`onmousedown` JavaScript 回調修改了 URL。
+
+考慮到這個，Mahmoud 決定使用它的鍵盤，嘗試使用 TAB 鍵在頁面上切換。當他來到`View Image`按鈕時，觸發了 JavaScript，產生了 XSS 漏洞。這裡是圖片：
+
+![5](https://raw.githubusercontent.com/dyeat/Document_read/master/Web_Hacking_101/image/10-5.jpg)
+
+Google XSS 漏洞
+
+>重要結論
+>
+>始終留意這種漏洞。很輕易就能假設，僅僅由於公司太大或者太知名，任何東西都被找到了。但是，公司始終會修改程式碼。
+>
+>此外，有大量方法來執行 JavaScript，這裡在看到 Google 使用`onmousedown`事件處理器修改值之後，
+>很容易就放棄了。這意味著任何時候使用鼠標點擊了連結，值都會改變。
 
