--- a/Web_Hacking_101/0x06-跨站腳本攻擊.md
+++ b/Web_Hacking_101/0x06-跨站腳本攻擊.md
@@ -160,7 +160,7 @@ Shopify 貨幣格式截圖
 
 ---
 
-## **4. 雅虎郵件存儲型 XSS**
+## **4. 雅虎郵件儲存型 XSS**
 
 ```
 難度：低
@@ -261,3 +261,71 @@ Google XSS 漏洞
 >此外，有大量方法來執行 JavaScript，這裡在看到 Google 使用`onmousedown`事件處理器修改值之後，
 >很容易就放棄了。這意味著任何時候使用鼠標點擊了連結，值都會改變。
 
+---
+
+## **6. Google Tagmanager 儲存型 XSS**
+
+```
+難度：中
+
+URL：tagmanager.google.com
+
+報告連結：https://blog.it-securityguard.com/bugbounty-the-5000-google-xss
+
+報告日期：2014.10.31
+
+獎金：$5000
+```
+
+描述:
+
+2014 年 10 月，Patrik Fehrehbach 在 Google 上發現了儲存型 XSS 漏洞。這個報告的有趣部分是，他如何設法繞過 Google 獲取載荷。
+
+Google Tagmanager 是一個 SEO 工具，使營銷人員添加和更新站點標籤變得容易 -- 包含轉化追踪、站點分析、重營銷、以及更多。為此，它擁有大量的表單，便於用戶交互。所以，Patrik 以嘗試將 XSS 載荷輸入到表單字段中開始，類似於`#>imgsrc=/ onerror=alert(3)>`。如果接受了，這就會閉合現有的 HTML `>`，之後嘗試加載不存在的圖片，這會執行`onerror` JavaScript，`alert(3)`。
+
+但是，這沒有效果。 Google 合理處理了輸入。 Patrik 注意到了一個替代方案 -- Google 提供了上傳帶有多個標籤的 JSON 文件的功能。所以，它下載了樣例並上傳：
+
+```json
+"data": { 
+    "name": "#"><img src=/ onerror=alert(3)>", 
+    "type": "AUTO_EVENT_VAR", 
+    "autoEventVarMacro": { 
+        "varType": "HISTORY_NEW_URL_FRAGMENT" 
+    } 
+}
+```
+
+這裡，你會注意到，標籤的名稱就是他的 XSS 載荷。結果，Google 沒有處理來自上傳文件的輸入，並執行了載荷。
+
+>重要結論
+>
+>這裡有兩個有趣的事情。首先Patrik 發現了替代方案來提供輸入 -- 要留意這個東西，並測試目標提供的所有方法來輸入數據。
+>其次，Google 處理了輸入，但是在渲染時沒有轉義。假設它轉義了 Patrik 的輸入，載荷就不會生效，因為 HTML 會被轉換成無害的字符。
+
+
+## **總結**
+
+XSS 漏洞對站點開發者展現了真實的風險，並且仍然在站點上流行，通常顯而易見。通常簡單提交 JavaScript `alert`方法的調用，`alert('test')`，你可以檢查輸入字段是否存在漏洞。此外，你可以將它與 HTML 注入組合，並提交 ASCII 編碼的字符來觀察文本是否被渲染和解釋。
+
+在搜索 XSS 漏洞時，這裡是要記住的一些事情：
+
+1. 測試任何東西
+<br>
+無論你在瀏覽什麼站點以及什麼時候瀏覽，總是要保持挖掘！不要覺得站點太大或者太複雜，而沒有漏洞。機會正在註視著你並請求你的測試，就像`wholesale.shopify.com`那樣。 Google Tagmanager 存儲型 XSS 漏洞就是尋找替代方案來向站點添加標籤的結果。
+
+2. 漏洞可能存在於任何表單值
+例如，Shopify 的禮品卡站點上的漏洞，通過利用和上傳文件相關的名稱字段來時間，並不是實際的文件字段本身。
+<br>
+
+3. 總是在測試時使用 HTML 代理
+當你嘗試提交來自網站自身的惡意值時，當站點的 JavaScript 檢查出你的非法值時，你可能會碰到假陽性。不要浪費你的時間。通過瀏覽器提供合法值，之後使用你的代理修改這些值來執行 JavaScript 並且提交。
+
+>譯者註：對於所有前端（包括移動和桌面）滲透，都應該這樣。就算不存在 XSS，也有可能挖到繞過和越權漏洞。
+
+4. XSS 漏洞發生在渲染的時候
+
+由於 XSS 在瀏覽器渲染文本時發生，要確保複查了站點的所有地方，其中使用了你的輸入值。逆天家的 JavaScript 可能不會立即渲染，但是會出現在後續的頁面中。這非常麻煩，但是你要留意站點何時過濾輸入，以及轉義輸出。如果是前者，尋找辦法來繞過輸入過濾器，因為開發者可能會犯懶，並且不會轉義渲染的輸入。
+
+5. 測試非預期的值
+
+不要總是提供預期類型的值。當 HTML 雅虎郵件的漏洞被發現時，提供了非預期的 HTML IMG 屬性。要跳出思維定式，思考開發者要尋找什麼，並且之後嘗試提供一些不匹配這些預期的東西。這包含尋找新的方式來執行潛在的 JavaScript，例如繞過 Google 圖片的`onmousemove`事件。
