--- a/Web_Hacking_101/0x08-開放重定向漏洞.md
+++ b/Web_Hacking_101/0x08-開放重定向漏洞.md
@@ -15,3 +15,36 @@
 >連結
 >
 >查看 (OWASP 無驗證重定向和轉發速查表)[https://www.owasp.org/index.php/Unvalidated_Redirects_and_Forwards_Cheat_Sheet]
+
+---
+
+## **示例**
+
+### **1. Shopify 主題安裝開放重定向**
+
+```
+難度：低
+
+URL：app.shopify.com/services/google/themes/preview/supply–blue?domain_name=XX
+
+連結：https://hackerone.com/reports/1019622
+
+報告日期：2015.11.25
+
+獎金：$500
+
+```
+## **描述：**
+
+Shopify 的平台允許商店管理員自定義商店外觀。為此，管理員需要安裝主題。這裡的漏洞時，主題安裝頁面會解釋重定向參數，並向用戶瀏覽器返回 301 重定向，而不驗證重定向的目標。
+
+<p>
+
+因此，如果用戶訪問`https://app.shopify.com/services/google/themes/preview/supply– blue?domain_name=example.com`，
+它會重定向到`http://example.com/admin`。
+<p>
+惡意用戶能夠在該域部署站點，並嘗試對無意識的用戶執行釣魚攻擊。
+
+>重要結論
+>
+>我這裡再說一遍，不是所有漏洞都很複雜。這裡的開放重定向只需要將重定向參數修改為外部站點。
