--- a/Web_Hacking_101/0x08-開放重定向漏洞.md
+++ b/Web_Hacking_101/0x08-開放重定向漏洞.md
@@ -3,7 +3,7 @@
 >
 >譯者：飛龍
 >
->協議：CC BY-NC-SA 4.0(http://creativecommons.org/licenses/by-nc-sa/4.0/)
+>[協議：CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
 
 ## **描述**
 
@@ -14,7 +14,7 @@
 
 >連結
 >
->查看 (OWASP 無驗證重定向和轉發速查表)[https://www.owasp.org/index.php/Unvalidated_Redirects_and_Forwards_Cheat_Sheet]
+>查看 [OWASP 無驗證重定向和轉發速查表](https://www.owasp.org/index.php/Unvalidated_Redirects_and_Forwards_Cheat_Sheet)
 
 ---
 
