--- a/Web_Hacking_101/0x08-開放重定向漏洞.md
+++ b/Web_Hacking_101/0x08-開放重定向漏洞.md
@@ -43,8 +43,38 @@ Shopify 的平台允許商店管理員自定義商店外觀。為此，管理員
 因此，如果用戶訪問`https://app.shopify.com/services/google/themes/preview/supply– blue?domain_name=example.com`，
 它會重定向到`http://example.com/admin`。
 <p>
-惡意用戶能夠在該域部署站點，並嘗試對無意識的用戶執行釣魚攻擊。
+惡意用戶能夠在該網域部署站點，並嘗試對無意識的用戶執行釣魚攻擊。
 
 >重要結論
 >
 >我這裡再說一遍，不是所有漏洞都很複雜。這裡的開放重定向只需要將重定向參數修改為外部站點。
+
+---
+
+### **2. Shopify 登入開放重定向**
+
+```
+難度：中
+
+URL：http://mystore.myshopify.com/account/login
+
+報告連結：https://hackerone.com/reports/103772
+
+報告日期：2015.12.6
+
+獎金：$500
+```
+描述：
+
+這個開放重定向非常類似於上面討論的主題安裝漏洞，但是這裏。漏洞在用戶登入，並且使用參數`?checkout_url`之後出現。例如：
+<p>
+
+http://mystore.myshopify.com/account/login?checkout_url=.np
+<p>
+	
+因此，當用戶訪問連結並登入，它會被重定向到：
+<p>
+
+https://mystore.myshopify.com.np/
+<p>
+它實際上完全不是 Shopify 的網網域。
