--- a/Web_Hacking_101/0x08-開放重定向漏洞.md
+++ b/Web_Hacking_101/0x08-開放重定向漏洞.md
@@ -66,15 +66,76 @@ URL：http://mystore.myshopify.com/account/login
 ```
 描述：
 
-這個開放重定向非常類似於上面討論的主題安裝漏洞，但是這裏。漏洞在用戶登入，並且使用參數`?checkout_url`之後出現。例如：
+這個開放重定向非常類似於上面討論的主題安裝漏洞，但是這裡。漏洞在用戶登入，並且使用參數`?checkout_url`之後出現。例如：
 <p>
 
 http://mystore.myshopify.com/account/login?checkout_url=.np
 <p>
-	
+
 因此，當用戶訪問連結並登入，它會被重定向到：
 <p>
 
 https://mystore.myshopify.com.np/
 <p>
-它實際上完全不是 Shopify 的網網域。
+它實際上完全不是 Shopify 的網域。
+
+---
+
+### **3. HackerOne 間隔重定向**
+
+```
+難度：中
+
+URL：無
+
+報告連結：https://hackerone.com/reports/111968
+
+報告日期：2016.1.20
+
+獎金：$500
+```
+描述：
+
+這裡的間隔重定向指代一些重定向，在重定向期間不發生停頓，來告訴你你正在被重定向。
+<p>
+HackerOne 實際上在報告中提供了該漏洞的純語言描述：
+<p>
+
+>hackerone.com連接被視為可信連接，包括/zendesk_session前面的那些。任何人都可以創建自定義的 Zendesk 賬戶，
+>它會重定向到不可信的站點，並在/redirect_to_account?state= param;提供該功能。
+>並且由於 Zendesk 允許賬戶之間的非間隔重定向，你會被引導到任何不可信站點，而沒有任何警告。
+>
+>了解 Zendesk 的原始問題之後，我們選擇將帶有zendesk_session的連結視為外部連結，點擊時會渲染一個外部的圖標和間隔警告頁面。
+>
+
+所以這裡，Mahmoud Jamal（是的，和 Google XSS 漏洞中的人一樣）創建了`company.zendesk.com`並將：
+```javascript
+<script>document.location.href = "http://evil.com";</script>
+```
+通過 Zendesk 的主題編輯器添加到了頭文件中。之後，傳遞這個連結：
+```
+https://hackerone.com/zendesk_session?locale_id=1&return_to=https://support.hackerone.com/ping/redirect_to_account?state=company:/
+```
+
+它用於重定向到生成的 Zendesk 會話。
+
+現在，有趣的是，Mahmoud 向 Zendesk 報告了這個重定向個問題，Zendesk 說他並沒有看到任何問題。所以，自然而然，它繼續挖掘這個漏洞，看看如何才能利用。
+
+>重要結論
+>
+>我們在應用邏輯一章中討論了它，但它重覆出現在這裡，在你搜索漏洞時，要注意站點所使用的的服務，因為在你的搜索過程中，它們每個都代表一種新的攻擊向量。
+>這裡，這個漏洞可以通過組合 Zendesk 的 HackerOne 使用方法，以及已知的所允許的重定向來實現。
+>
+>此外，在你尋找 bug 時，閱讀和回應你的報告的人有時不能馬上理解安全影響。這就是我在漏洞報告中編寫這一章的原因。
+>如果你往前推進一小步，並且在你的報告中解釋安全映像，它會確保順利解決。
+>
+>但是，即使是這樣，公司有時候也會不理解你。如果是這樣，像 Mahmoud 所做的一樣，保持挖掘，並看看是否可以證明它可以利用，或者將其和其它漏洞組合來展示影響。
+
+## **總結**
+開放重定向個允許惡意攻擊者將人們重定向到未知的惡意站點。就像這些例子展示的那樣，尋找他們需要銳利的觀察。有時會出現易於發現的`redirect_to=`，`domain_name=`，`checkout_url=`，以及其它。這種類型的漏洞依賴信任的濫用，其中受害者被誘導來訪問攻擊者的站點，並認為他們正在瀏覽他們認可的站點。
+<p>
+
+通常，當 URL 作為參數傳遞給 Web 請求時，你可以發現它們。要留意並玩轉 URL 地址，以便觀察是否接受外部站點的連結。
+<p>
+
+此外，HackerOne 間隔重定向展示了二者的重要性。當你尋找漏洞時，識別站點所用的工具和服務，以及有時在被認可和接受之前，你需要堅持並清晰展示漏洞。
