--- a/Web_Hacking_101/0x08-開放重定向漏洞.md
+++ b/Web_Hacking_101/0x08-開放重定向漏洞.md
@@ -101,9 +101,9 @@ URL：無
 HackerOne 實際上在報告中提供了該漏洞的純語言描述：
 <p>
 
->`hackerone.com`連接被視為可信連接，包括`/zendesk_session`前面的那些。任何人都可以創建自定義的 Zendesk 賬戶，
+>`hackerone.com`連接被視為可信連接，包括`/zendesk_session`前面的那些。任何人都可以創建自定義的 Zendesk 帳戶，
 >它會重定向到不可信的站點，並在`/redirect_to_account?state= param;`提供該功能。
->並且由於 Zendesk 允許賬戶之間的非間隔重定向，你會被引導到任何不可信站點，而沒有任何警告。
+>並且由於 Zendesk 允許帳戶之間的非間隔重定向，你會被引導到任何不可信站點，而沒有任何警告。
 >
 >了解 Zendesk 的原始問題之後，我們選擇將帶有`zendesk_session`的連結視為外部連結，點擊時會渲染一個外部的圖標和間隔警告頁面。
 >
