--- a/Web_Hacking_101/0x09-子域劫持.md
+++ b/Web_Hacking_101/0x09-子域劫持.md
@@ -26,3 +26,39 @@
 
 所以，按照這個邏輯，DNS 條目需要指向未申請的外部服務，例如 Heroku，Github 和 Amazon S3。發現它們的一個不錯的方法是使用 KnockPy，它會在工具一節中討論，它叠代了子域的常見列表來驗證是否存在。
 
+
+---
+
+## **示例**
+
+
+### **1. Ubiquiti 子域劫持**
+```
+難度：低
+
+URL：http://assets.goubiquiti.com
+
+報告連結：https://hackerone.com/reports/109699
+
+報告日期：2016.1.10
+
+獎金：$500
+```
+
+描述：
+
+就像子域劫持的描述中所述，`http://assets.goubiquiti.com`擁有指向 Amazon S3 文件存儲的 DNS 記錄，但是不存在實際的 Amazon S3 容器。這裡是 HackerOne 的截圖：
+
+
+![1](https://raw.githubusercontent.com/dyeat/Document_read/master/Web_Hacking_101/image/13-1.jpg)
+
+因此，惡意用戶可以申請`uwn-images.s3-website-us-west-1.amazonaws.com`，並在這裡部署站點。假設它可以更加類似 Ubiquiti，這裡的漏洞是誘使用戶來提交個人訊息，並控制帳戶。
+
+>重要結論
+>
+>DNS 記錄提供了全新並獨特的漏洞利用機會。使用KnockPy 來嘗試驗證子域是否存在，之後確認它們指向有效的資源，並且特別註意三方服務，
+>例如 AWS、Github、Zendesk >以及其他。這些服務允許你註冊自定義的 URL。
+
+
+---
+
