--- a/Web_Hacking_101/0x09-子域劫持.md
+++ b/Web_Hacking_101/0x09-子域劫持.md
@@ -1,4 +1,4 @@
-## **0x09-子域劫持**
+## **0x09-子域名劫持**
 
 >作者：Peter Yaworski
 >
@@ -7,7 +7,7 @@
 >協議：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
 
 ## **描述**
-子域控制就真的是聽上去那樣，它是一種場景，惡意用戶能夠代表合法站點來申請一個子域。總之，這一類型的漏洞涉及站點為子域創建 DNS 記錄，例如，Heroku（主機商），並且從未申請過該子域。
+子域名控制就真的是聽上去那樣，它是一種場景，惡意用戶能夠代表合法站點來申請一個子域名。總之，這一類型的漏洞涉及站點為子域名創建 DNS 記錄，例如，Heroku（主機商），並且從未申請過該子域名。
 
 1. `example.com`在Heroku 上註冊。
 <p>
@@ -24,7 +24,7 @@
 5. 所有`subdomain.example.com`的流量都會流經惡意網站，它看上去類似`example.com`。
 <p>
 
-所以，按照這個邏輯，DNS 條目需要指向未申請的外部服務，例如 Heroku，Github 和 Amazon S3。發現它們的一個不錯的方法是使用 KnockPy，它會在工具一節中討論，它叠代了子域的常見列表來驗證是否存在。
+所以，按照這個邏輯，DNS 條目需要指向未申請的外部服務，例如 Heroku，Github 和 Amazon S3。發現它們的一個不錯的方法是使用 KnockPy，它會在工具一節中討論，它叠代了子域名的常見列表來驗證是否存在。
 
 
 ---
@@ -32,7 +32,7 @@
 ## **示例**
 
 
-### **1. Ubiquiti 子域劫持**
+### **1. Ubiquiti 子域名劫持**
 ```
 難度：低
 
@@ -47,7 +47,7 @@ URL：http://assets.goubiquiti.com
 
 描述：
 
-就像子域劫持的描述中所述，`http://assets.goubiquiti.com`擁有指向 Amazon S3 文件存儲的 DNS 記錄，但是不存在實際的 Amazon S3 容器。這裡是 HackerOne 的截圖：
+就像子域名劫持的描述中所述，`http://assets.goubiquiti.com`擁有指向 Amazon S3 文件存儲的 DNS 記錄，但是不存在實際的 Amazon S3 容器。這裡是 HackerOne 的截圖：
 
 
 ![1](https://raw.githubusercontent.com/dyeat/Document_read/master/Web_Hacking_101/image/13-1.jpg)
@@ -56,7 +56,7 @@ URL：http://assets.goubiquiti.com
 
 >重要結論
 >
->DNS 記錄提供了全新並獨特的漏洞利用機會。使用KnockPy 來嘗試驗證子域是否存在，之後確認它們指向有效的資源，並且特別註意三方服務，
+>DNS 記錄提供了全新並獨特的漏洞利用機會。使用KnockPy 來嘗試驗證子域名是否存在，之後確認它們指向有效的資源，並且特別註意三方服務，
 >例如 AWS、Github、Zendesk >以及其他。這些服務允許你註冊自定義的 URL。
 
 
