--- a/Web_Hacking_101/0x09-子域劫持.md
+++ b/Web_Hacking_101/0x09-子域劫持.md
@@ -18,7 +18,7 @@
 3. `example.com`沒有申請`unicorn457.heroku.com`。
 <p>
 
-4. 惡意用戶申請了`unicorn457.heroku.com`，並覆制了`example.com`。
+4. 惡意用戶申請了`unicorn457.heroku.com`，並複製了`example.com`。
 <p>
 
 5. 所有`subdomain.example.com`的流量都會流經惡意網站，它看上去類似`example.com`。
