--- a/Web_Hacking_101/0x09-子域劫持.md
+++ b/Web_Hacking_101/0x09-子域劫持.md
@@ -62,3 +62,24 @@ URL：http://assets.goubiquiti.com
 
 ---
 
+### **2. Scan.me 的 Zendesk 指向**
+```
+難度：低
+
+URL：support.scan.me
+
+報告連結：https://hackerone.com/reports/114134
+
+報告日期：2016.2.2
+
+獎金：$1000
+```
+描述：
+
+就像 Ubiquiti 的示例那樣，這裡 Scan.me 擁有一個 DNS 記錄，將`support.scan.me`指向`scan.zendesk.com`。這種情況下，
+黑客`harry_mg`就能夠申請`scan.zendesk.com`，`support.scan.me`指向了它。
+就是這樣了，獎金是 $1000。
+
+>重要結論
+>
+>要注意！這個漏洞與 2016 年 2 月發現，並且完全不複雜。成功的漏洞挖掘需要敏銳的觀察。
