--- a/Web_Hacking_101/0x09-子域劫持.md
+++ b/Web_Hacking_101/0x09-子域劫持.md
@@ -56,7 +56,7 @@ URL：http://assets.goubiquiti.com
 
 >重要結論
 >
->DNS 記錄提供了全新並獨特的漏洞利用機會。使用KnockPy 來嘗試驗證子域名是否存在，之後確認它們指向有效的資源，並且特別註意三方服務，
+>DNS 記錄提供了全新並獨特的漏洞利用機會。使用KnockPy 來嘗試驗證子域名是否存在，之後確認它們指向有效的資源，並且特別注意三方服務，
 >例如 AWS、Github、Zendesk >以及其他。這些服務允許你註冊自定義的 URL。
 
 
