--- a/Web_Hacking_101/0x09-子域劫持.md
+++ b/Web_Hacking_101/0x09-子域劫持.md
@@ -83,3 +83,94 @@ URL：support.scan.me
 >重要結論
 >
 >要注意！這個漏洞與 2016 年 2 月發現，並且完全不複雜。成功的漏洞挖掘需要敏銳的觀察。
+
+---
+
+## **3. Facebook 官方的訪問 Token**
+
+```
+難度：高
+
+URL：facebook.com
+
+報告連結：http://philippeharewood.com/swiping-facebook-official-access-tokens
+
+報告日期：2016.2.29
+
+獎金：未公開
+
+```
+
+描述：
+
+我不知道這是否符合子域劫持的技術定義（如果有的話），但是我覺得這是個重大的發現，讓 Philippe 能夠以最少的交互劫持任意 Facebook 帳戶。
+<p>
+
+為了理解這個漏洞，我們需要看一看 OAuth，根據他們的站點，它是一個開放協議，能夠以簡單和標準的方式來驗證 Web 移動和桌面應用的安全性。換句話說，OAuth 允許用戶授權某個應用來代表它們，而不需要向應用分享密碼。如果你曾經瀏覽器過某個站點，它讓你使用你的 Google、Facebook、Twitter 以及其他帳戶來登錄，你就使用了 OAuth。
+<p>
+
+現在，假設你注意到了這裡的潛在利用。如果 OAuth 允許用戶授權，錯誤實現的影響非常之大。理解了這個過程之後，Philippe 提供了一副不錯的圖片來解釋協議是如何實現的。
+
+![1](https://raw.githubusercontent.com/dyeat/Document_read/master/Web_Hacking_101/image/13-2.jpg)
+
+Philippe Harewood - Facebook OAuth 流程
+<p>
+
+總之，我們可以在這裡看到：
+
+1. 用戶通過一些 APP 請求將 Facebook API 使用一些目的。
+<p>
+
+2. 這個 APP 將用戶重定向到 Facebook API 來授予權限。
+<p>
+
+3. Facebook API 向用戶提供程式碼並將其重定向到 APP。
+<p>
+
+4. APP 接受程式碼並呼叫 Facebook API 來獲得 Token。
+<p>
+
+5. Facebook 返回 Token 給 APP，它代表用於為呼叫授權。
+
+這個流程中，你會注意到用戶在哪兒都不需要向訪問它們帳戶的 APP 提供他們的 Facebook 用戶名和密碼。這也是個概覽，這裡也可能出現很多其他事情，包括可以在流程中交換的額外信息。
+<p>
+
+這裡有一個重大漏洞，Facebook 在 #5 中向應用提供訪問 Token。
+<p>
+
+再回頭考慮 Philippe 的發現，它詳細解釋了如何嘗試並捕獲這些 Token，來誘使 Facebook
+向他發送它們，而不是那個應用。但是，反之，它決定尋找能夠控制的，存在漏洞的 Facebook 應用。
+<p>
+
+結果，每個 Facebook 用戶都使用它們的帳戶授權的應用，但是許多都不顯式使用。根據他的 Write Up，一個例子是"Content Tab of a Page on www"，它在 Facebook 粉絲頁面加載了一些 API 呼叫。APP 的列表課在`https://www.facebook.com/search/me/apps-used` 上獲取。
+<p>
+
+瀏覽器這個列表之後，Philippe 設法找到了一個 APP，它的配置是錯誤的，並且可用於使用請求來捕獲 Token，請求為：
+
+```
+https://facebook.com/v2.5/dialog/oauth?response_type=token&display=popup&client_id=APP_ID&redirect_uri=REDIRECT_URI
+```
+
+這裡，它所使用來獲取`APP_ID`的應用，是擁有完整權限並配置錯誤的，意思是步驟 #1 和 #2 已經完成了，用戶不會看到彈出窗口來向應用授予權限，因為它們實際上已經完成了。此外，由於 Facebook 並不持有`REDIRECT_URI`，Philippe 實際上可以持有它，準確來說就像子域那樣。因此，當用戶點擊了它的鏈接，它們會重定向到：
+
+[http://REDIRECT_URI/access_token_appended_here](http://REDIRECT_URI/access_token_appended_here)
+
+Philippe 可以使用它來記錄所有訪問 Token，並劫持 Facebook 帳戶。更加 NB 的是，根據它的貼文，一旦你擁有了官方的 Facebook 訪問 Token，你就擁有了萊斯其他 Facebook 應用的 Token，例如 Instagram。他需要做的所有事情就是呼叫 Facebook GraphQL（一個用於從 Facebook 獲取數據的 API），響應就會包含用於請求中 APP 的`access_token`。
+
+
+>重要結論
+>
+>我覺得你可能想知道，為什麽這個例子會包含在這本書的這個章節。對我來說，最重要的結論就是。要考慮到在滲透過程中如何利用一些遺留資源。
+>在這一章的上一個例子中，DNS指向了不再繼續使用的服務。這裡，尋找了預先審批了不再使用的應用。當你滲透的時候，要尋找這些應用的變化，
+>它們可能會給你留下公開的資源。
+>
+>此外，如果你喜歡這個例子，你可以查看 Philippe 的博客
+>（包含在資源一章，以及" Hacking Pro Tips Interview"，這是他坐下來和我一起完成的，他提供了很多不錯的建議）。
+
+
+## **總結**
+當一個站點已經創建了無用的 DNS 記錄，指向三方服務提供商，子域劫持真的不難以完成。有很多方法來發現它們，包括使用 KnockPy，Google Hack（`site:*.hackerone.com`），Recon-ng，以及其他。這些東西的用法都包含在這本書的工具一章。
+<p>
+
+此外，就像前面那個 Facebook 訪問 Token 的示例那樣，當你考慮這種類型的漏洞時，擴展你的領域，並且考慮目標上存在什麽過時的遺留資源。例如，`redirect_uri`和預先審批的 Facebook APP。
+
